优化首页设计：压缩布局、统一视觉风格、增强开始测试按钮

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- 标题 -->
         <h1 class="welcome-title">天赋测试</h1>
         <p class="welcome-subtitle-en">TALENT ASSESSMENT</p>
-        <p class="welcome-tag">@DeepAI研究室</p>
+        <a href="https://xhslink.com/m/8UtM1vo9vJ7" target="_blank" class="welcome-tag">@DeepAI研究室</a>
 
         <!-- Slogan -->
         <h2 class="welcome-slogan">每个人都有自己独特的天赋</h2>
@@ -49,7 +49,7 @@
           </div>
 
           <div class="feature-card">
-            <div class="feature-icon-new feature-icon-highlight">
+            <div class="feature-icon-new">
               <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
               </svg>
@@ -95,10 +95,10 @@
           请在安静的环境下完成测试，将获得更准确的结果
         </p>
 
-        <!-- 隐私声明 -->
-        <div class="privacy-notice">
-          <p>测试结果仅供参考</p>
-          <p>本测试不会收集任何个人信息</p>
+        <!-- 底部信息区域 -->
+        <div class="footer-info">
+          <p>测试结果仅供参考 · 不收集个人信息</p>
+          <p class="footer-copyright-text">© 2025 DeepAI研究室 出品</p>
         </div>
       </div>
     </div>
