--- a/result.html
+++ b/result.html
@@ -49,6 +49,12 @@
           <span>重新测试</span>
         </button>
       </div>
+
+      <!-- 底部版权信息 -->
+      <div class="result-footer">
+        <p>测试结果仅供参考 · 不收集个人信息</p>
+        <p class="footer-copyright-text">© 2025 DeepAI研究室 出品</p>
+      </div>
     </div>
   </div>
 
