--- a/LifeBattery.html
+++ b/LifeBattery.html
@@ -440,9 +440,9 @@
                 <input type="text" class="task-input" id="task1" placeholder="第一件最重要的事...">
                 <div class="select-wrapper">
                     <select class="category-select" id="cat1" onchange="updateColor(this)">
-                        <option value="maintenance">生存 (维护)</option>
-                        <option value="optimization">进化 (改进)</option>
-                        <option value="innovation">创造 (突破)</option>
+                        <option value="maintenance">生存</option>
+                        <option value="optimization">进化</option>
+                        <option value="innovation">创造</option>
                     </select>
                 </div>
             </div>
@@ -455,9 +455,9 @@
                 <input type="text" class="task-input" id="task2" placeholder="第二件事...">
                 <div class="select-wrapper">
                     <select class="category-select" id="cat2" onchange="updateColor(this)">
-                        <option value="maintenance">生存 (维护)</option>
-                        <option value="optimization">进化 (改进)</option>
-                        <option value="innovation">创造 (突破)</option>
+                        <option value="maintenance">生存</option>
+                        <option value="optimization">进化</option>
+                        <option value="innovation">创造</option>
                     </select>
                 </div>
             </div>
@@ -470,9 +470,9 @@
                 <input type="text" class="task-input" id="task3" placeholder="第三件事...">
                 <div class="select-wrapper">
                     <select class="category-select" id="cat3" onchange="updateColor(this)">
-                        <option value="maintenance">生存 (维护)</option>
-                        <option value="optimization">进化 (改进)</option>
-                        <option value="innovation">创造 (突破)</option>
+                        <option value="maintenance">生存</option>
+                        <option value="optimization">进化</option>
+                        <option value="innovation">创造</option>
                     </select>
                 </div>
             </div>
